--- a/.github/workflows/cpp.yml
+++ b/.github/workflows/cpp.yml
@@ -1,11 +1,9 @@
-name: C/C++ CI - Build Status
+name: C/C++ CI 
 
 on:
-  workflow_dispatch
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
+  
 
 jobs:
   build:
@@ -15,4 +13,4 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: make
-      run: make -C 3_Implementation/ all
+      run: make -C 3_Implementation/ 
