--- a/.github/workflows/Valgrind_check.yml
+++ b/.github/workflows/Valgrind_check.yml
@@ -19,5 +19,5 @@ jobs:
         sudo apt-get -y install libcunit1 libcunit1-doc libcunit1-dev 
     - name: make test
       run: |
-        make run -C implementation/
-        valgrind ./implementation/Room_Booking_System.out
+        make run -C 3_Implementation/
+        valgrind ./3_Implementation/Room_Booking_System.out
